adding fare histogram and learning subplots as well

--- a/titanic_kaggle/Titanic Survival analysis - Kaggle training dataset.ipynb
+++ b/titanic_kaggle/Titanic Survival analysis - Kaggle training dataset.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -58,6 +58,25 @@
    "metadata": {
     "collapsed": false
    },
+   "outputs": [],
+   "source": [
+    "# reading the dataset\n",
+    "train = pd.read_csv(\"train.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Quick stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -89,7 +108,6 @@
     }
    ],
    "source": [
-    "train = pd.read_csv(\"train.csv\")\n",
     "print \"the variable train is of data type \", type (train)\n",
     "print\n",
     "print (train.head(5))"
@@ -99,7 +117,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -269,6 +287,49 @@
    "metadata": {},
    "source": [
     "seems like most of the fares are less than 100. but there are a few outliers that are pretty expensive. worth splitting the fares up by 100 and looking at the fare distribution."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 15.,   7.,   9.,   2.,   0.,   5.,   4.,   8.,   0.,   0.,   0.,\n",
+       "          0.,   0.,   0.,   0.,   0.,   0.,   0.,   0.,   3.]),\n",
+       " array([ 100.     ,  120.61646,  141.23292,  161.84938,  182.46584,\n",
+       "         203.0823 ,  223.69876,  244.31522,  264.93168,  285.54814,\n",
+       "         306.1646 ,  326.78106,  347.39752,  368.01398,  388.63044,\n",
+       "         409.2469 ,  429.86336,  450.47982,  471.09628,  491.71274,\n",
+       "         512.3292 ]),\n",
+       " <a list of 20 Patch objects>)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXsAAAEACAYAAABS29YJAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGd1JREFUeJzt3X+wHfV53/H3BwnFyNTIijtCRmpREqiNSyyIITT+wTUG\nRziuoGnHhsS2ArHH0ziYkJQgkWkkT2dsTAp2ph480yBcGYNSClgjJf4hQbixk4yFiSUhkBRBihqE\npStsYxuHdhDR0z/2K1gdnXvu+bF7ds/Zz2vmjPbs2bP7fL9373NXu/t9VhGBmZmNtxOqDsDMzMrn\nZG9m1gBO9mZmDeBkb2bWAE72ZmYN4GRvZtYAHZO9pFdJ2ippu6Rdkj6V5q+RtF/StvS6NPedVZKe\nkLRH0rvLboCZmc1MM91nL2luRLwgaTbwV8B/At4FPB8Rt7YsexZwN3AecBrwAHBmRBwpI3gzM+vO\njKdxIuKFNDkHmAU8l96rzeKXAesj4nBE7AOeBM4vIE4zMxvAjMle0gmStgNTwEMR8Xj66BpJOySt\nlTQvzXs9sD/39f1kR/hmZlahbo7sj0TEUmAR8A5JE8DngSXAUuAAcEunVRQQp5mZDWB2twtGxI8k\n/TnwloiYPDpf0u3ApvT2GWBx7muL0rxjSPIfADOzPkREu1PoM5rpbpzXHT1FI+kk4BJgm6RTc4v9\nO2Bnmt4IXCFpjqQlwBnAw9MEPLav1atXVx6D2+b2uX3j9xrETEf2C4F1kk4g+8NwZ0Q8KOmLkpaS\nnaJ5CvhoSuC7JN0D7AJeAn4rBo3QzMwG1jHZR8RO4Nw28z/U4TufBD45eGhmZlYUj6AtwcTERNUh\nlGac2wZu36gb9/YNYsZBVaVsVPLZHTOzHkkiyrhAa2Zm48HJ3sysAZzszcwawMnezKwB+i1xPF/S\nFkl7JW3O1cYZaoljSV2/zMyarN8Sx8uB70XEzZJuAF4bESu7LXFc1N04WRLvZj0aePSZmVnVSr0b\nJ9qXOF4OrEvz1wGXp2mXODYzq6F+SxwviIiptMgUsCBNu8SxmVkNzVj1Mp2CWSrpFODrkt7Z8nnM\nUMWy7Wdr1qx5eXpiYsIj38zMWkxOTjI5OVnIunoaQSvpPwP/F/gwMBERByUtJDvif4OklQARcVNa\n/mvA6ojY2rIen7M3M+tRaefspytxTFbKeEVabAWwIU13XeLYzMyGp98Sx9uAeyT9JrAPeB+4xLGZ\nWV2NdCE0n8YxsyZxITQzM+vIyd7MrAGc7M3MGsDJ3sysAZzszcwaYKb77BdLekjS45Iek/TxNH+N\npP2StqXXpbnvDK3qpZmZdafjrZeSTgVOjYjtkk4G/pas6Nn7gOcj4taW5V310sysJKXdehkRByNi\ne5r+CbCbVwqbtdugq16amdVQ1+fsJZ0OnAN8K826RtIOSWtzDy9x1UszsxrqKtmnUzj3AtemI/zP\nA0uApcAB4JYOX/f5EzOzis1Y4ljSicB9wJciYgNARBzKfX47sCm9fQZYnPv6ojTvOC5xbGbW2dBK\nHCu7AroO+H5EXJebvzAiDqTp64DzIuLXchdoz+eVC7Q/13o11hdozcx6N8gF2pmO7N8KfAB4NFW6\nBLgRuFLSUrJM+xTwUXDVSzOzunLVSzOzEeGql2Zm1pGTvZlZAzjZm5k1gJO9mVkDONmbmTWAk72Z\nWQP0W+J4vqQtkvZK2pyrjeMSx2ZmNdRvieOrgO9FxM2SbgBeGxErXeLYzKw8VZQ4Xk5WRoH07+Vp\n2iWOzcxqqJ8Sx1uBBRExlT6aAhakaZc4NjOroRmrXsLLJY7vIytx/Hx2+iQTESGp0zmStp+56qWZ\nWWdDq3oJL5c4/jPgqxHx2TRvDzAREQclLQQeiog3SFoJEBE3peW+BqyOiK0t6/Q5ezOzHpV2zj6V\nOF4L7Dqa6JONwIo0vQLYkJt/haQ5kpYAZwAP9xOYmZkVZ6a7cd4GfAN4lFcOoVeRJfB7gH8B7APe\nFxE/TN+5EbiarMTxtRHx9Tbr9ZG9mVmPBjmyd4ljM7MR4RLHZmbWkZO9mVkDONmbmTWAk72ZWQM4\n2ZuZNcCMyV7SHZKmJO3MzVsjab+kbel1ae4zV700M6uZbo7svwAsa5kXwK0RcU56fRUgVb18P3BW\n+s5tkvy/BzOzis2YiCPim8BzbT5qd6+nq16amdXQIEfd10jaIWlt7uElrnppZlZD/Sb7zwNLgKXA\nAeCWDst66KqZWcW6KnHcKiIOHZ2WdDuwKb19BlicW3RRmncclzg2M+tsqCWO4eUHl2yKiLPT+4UR\ncSBNXwecFxG/lnss4fm88ljCn2sthOPaOGZmvRukNs6MR/aS1gMXAq+T9DSwGpiQtJQs0z4FfBQg\nInZJugfYRVb18rcKyepmZjYQV700MxsRrnppZmYdOdmbmTWAk72ZWQM42ZuZNYCTvZlZAzjZm5k1\nQL8ljudL2iJpr6TNudo4LnFsZlZD/ZY4XglsiYgzgQfTe5c4NjOrqX5LHC8H1qXpdcDladoljs3M\naqjfo+4FETGVpqeABWnaJY7NzGqor6qXeRERkjrVImj7matempl1Voeql3uAiYg4KGkh8FBEvEHS\nSoCIuCkt9zVgdURsbVmfa+OYmfWoito4G4EVaXoFsCE3/wpJcyQtAc4AHu5zG4WSNOPLzGxc9VPi\n+A+Bm4B7JP0msA94H9S9xPFMYTjZm9n4akyJ426SfW3+LpmZteESx2Zm1pGTvZlZAwx866X1p9sL\nwj61ZGZFcLKvlC8am9lw+DSOmVkDDHRkL2kf8GPgn4DDEXG+pPnA/wT+Jem2zIj44YBxDkU3p1Z8\nWsXMRtGgR/ZBNpL2nIg4WvCsbUXM0RAzvMzMRlMRp3FaD4enq4hpZmYVKeLI/gFJj0j6SJo3XUVM\nMzOryKB347w1Ig5I+ufAllQg7WVdVMQ0M7MhGCjZR8SB9O+zkr5M9qCSKUmn5ipiHmr3XZc4NjPr\nbOgljtt+UZoLzIqI5yW9GtgMfAK4GPh+RHw6lTyeFxErW75by9o4w6yf013srtdjZq8YpDbOIEf2\nC4Avp9sVZwN3RcRmSY/QpiKmmZlVx1Uve1zGR/ZmVpWqjuytJlxnx8xm4mRfgmqeeuU6O2Y2PSf7\n0hSTfP24RDMrgpN97XV7TcLMbHpO9j3ykfZw9dLfviZhNr3Kkv2ZZ57X8fNf/dVl3HTTfxlSNL0Y\n3yPt+l7oHd8+L1J9f35WB6Uke0nLgM8Cs4DbI+LTrcs88cRtHdbwVXbv3ltGaDajZl/onZycHPHR\n3P75jfbPrzyFP7xE0izgc8Ay4CzgSklvPH7J8zq8fqbosIzsyK/Tq27x9BpTEesramh6t/H4tGCx\nivz5jZsyjuzPB56MiH0Akv4UuAzY3ctKNm68C+mu4qNrtDoe9RUZ08zr6ia55us2DW7w9hX9B2GY\nD+nxqaX6KCPZnwY8nXu/H/jF4xe7tcMqHkn/1jE52Wj/AhfzB6FI3W2vyOsWw+6D4rZXz31qNJSR\n7Lv8afxeF8t0swN0u1MWtS5vr1vd/QLXsQ+KVNT23AfQ3T71iU98orDtjZMykv0zwOLc+8VkR/cv\n67e2g5mZ9afwC7Rk52DOkHS6pDnA+4GNJWzHzMy6VPiRfUS8JOm3ga+T3Xq5NiJ6ujhrZmbFqqTE\nsZmZDVcZp3GmJWmZpD2SnpB0wzC3XQZJiyU9JOlxSY9J+niaP1/SFkl7JW2WNK/qWAchaZakbZI2\npfdj0z5J8yTdK2m3pF2SfnFc2idpVdo3d0q6W9JPjXLbJN0haUrSzty8aduT2v9Eyjnvribq7k3T\nvj9K++YOSfdLOiX3WU/tG1qy736w1Ug5DFwXEW8CLgA+ltq0EtgSEWcCD6b3o+xaYBev3Gk1Tu37\nY+ArEfFG4OeBPYxB+ySdDnwEODciziY7pXoFo922L5Dlj7y27ZF0Ftn1wrPSd26TNNSD2z60a99m\n4E0R8WZgL7AK+mvfMBv/8mCriDgMHB1sNbIi4mBEbE/TPyEbOHYasBxYlxZbB1xeTYSDk7QIeA9w\nO6/cQzcW7UtHSW+PiDsgu94UET9iPNr3Y7KDkbmSZgNzge8ywm2LiG8Cz7XMnq49lwHrI+JwGuD5\nJFkOqq127YuILRFxJL3dCixK0z23b5jJvt1gq9OGuP1SpSOpc8h+IAsiYip9NEX2vN5R9RngeuBI\nbt64tG8J8KykL0j6jqQ/kfRqxqB9EfED4BbgH8iS/A8jYgtj0LYW07Xn9Rx7y/c45Jurga+k6Z7b\nN8xkP7ZXgiWdDNwHXBsRz+c/Sw/bHcm2S3ovcCgitjHNyJhRbh/Z3WjnArdFxLnAP9JyWmNU2yfp\nZ4HfAU4nSwwnS/pAfplRbdt0umjPyLZV0h8AL0bE3R0W69i+YSb7GQdbjSJJJ5Il+jsjYkOaPSXp\n1PT5QuBQVfEN6JeA5ZKeAtYDF0m6k/Fp335gf0R8O72/lyz5HxyD9r0F+JuI+H5EvATcD/wbxqNt\nedPti635ZlGaN3Ik/QbZqdRfz83uuX3DTPZjN9hK2djttcCuiPhs7qONwIo0vQLY0PrdURARN0bE\n4ohYQnZx7y8i4oOMT/sOAk9LOjPNuhh4HNjE6LdvD3CBpJPSfnox2UX2cWhb3nT74kbgCklzJC0B\nzgAeriC+gSgrF389cFlE/L/cR723LyKG9gIuBf6O7GLCqmFuu6T2vI3sXPZ2YFt6LQPmAw+QXT3f\nDMyrOtYC2nohsDFNj037gDcD3wZ2kB39njIu7QN+n+yP106yi5cnjnLbyP53+V3gRbLrf1d1ag9w\nY8o1e4Bfrjr+Ptp3NfAE8H9y+eW2ftvnQVVmZg1Q9/tOzcysAE72ZmYN0Heybze0N82/Jg3vfUzS\ncc+eNTOz4RvkyP64ob2S3kk2ou3nI+JfA/91gPWbmVlB+k720X7o8n8EPhVZOQQi4tkBYjMzs4IU\nfc7+DOAdkr4laVLSWwpev5mZ9aHoh5fMBl4bERdIOg+4B/iZ1oUk+X5PM7M+RJ+PdS36yH4/2cAU\nIhuCfkTST7dbsOoBDK2v1atXVx6DYxqvuByTYyr6NYiik/0G4CKANAR9TkR8v+BtmJlZj/o+jSNp\nPdkQ+p+W9DTwh8AdwB3pdswXgQ8VEqWZmQ2k72QfEVdO89EH+11nlSYmJqoO4TiOqXt1jMsxdccx\nDUcltXEkRRXbNTMbZZKIPi/QFn03TteWLFna1/d+5Vcu4nOfu7XgaMzMxltlyX7fvv/Rx7ceZPfu\nvy46FDOzsVdZsod+juz/N+Bkb2bWq8ILoaXPfk/SEUnzBwvPzMyKUGghNABJi4FLyJ6uYmZmNVB0\nITSAW8keh2ZmZjVR6AhaSZcB+yPi0SLXa2ZmgynsAq2kuWQPwL0kP3v6b6zJTU+kl5mZHTU5Ocnk\n5GQh6xpoUJWk04FNEXG2pLPJnvL+Qvp4EfAMcH5EHGr5XkA/272fiy76Eg8+eH/fMZuZjapaDKqK\niJ3AglxQTwG/EBE/KGobZmbWn0FuvVwP/A1wpqSnJV3VsojrIZiZ1UQZhdCOfn7cQ0vMzKwaRdez\nNzOzGnKyNzNrACd7M7MGKLQ2jqQ/krRb0g5J90s6pZgwzcxsEEXXxtkMvCki3gzsBVYNsH4zMytI\nobVxImJLRBxJb7eSDawyM7OKlXnO/mrgKyWu38zMulRKspf0B8CLEXF3Ges3M7PeFP6kKkm/AbwH\neFfnJdfkpidwITQzs2PVshBaer8MuAW4MCK+1+F7LoRmZtajQQqhFVEb51+l2jhXA/8NOBnYImmb\npNv6Xb+ZmRWn6No4dwwQi5mZlcQjaM3MGsDJ3sysAZzszcwawMnezKwBii6ENl/SFkl7JW2WNK+Y\nMM3MbBBFF0JbCWyJiDOBB9N7MzOrWKGF0IDlwLo0vQ64vN/1m5lZcYo+Z78gIqbS9BSwoOD1m5lZ\nHwqvjXNURERWFmE6a3LTE7g2jpnZsepcG2cPMBERByUtBB6KiDe0+Z5r45iZ9aiS2jjT2AisSNMr\ngA0Fr9/MzPpQZCG0q4CbgEsk7QUuSu/NzKxiRRdCA7i433WamVk5PILWzKwBnOzNzBqgtFsv60rq\n60L2ywa5e8nMrCqNS/aZfhP2YH8ozMyqUsppHEmrJD0uaaekuyX9VBnbMTOz7hSe7NNAq48A56bB\nVrOAK4rejpmZda+M0zg/Bg4DcyX9EzAXeKaE7ZiZWZcKP7KPiB8AtwD/AHwX+GFEPFD0dszMrHuF\nH9lL+lngd4DTgR8B/0vSr0fEXccuuSY3PYELodXToHcvge9gMutXbQqhtV2h9H7gkoj4cHr/QeCC\niPhYbpnKCqFlyav/u3GalrgG6y9oYp+ZlaVOhdAA9gAXSDpJWaa4GNhVwnbMzKxLZZyz3wF8EXgE\neDTN/u9Fb8fMzLpXyqCqiLgZuLmMdZuZWe9cG8fMrAEKv0Db1UYHuEAL/76ACHyBtlu+QGtWH4Nc\noB3R2jiDJR8zs6YpqzbOPEn3StotaZekC8rYjpmZdaesI/s/Br4SEf9B0mzg1SVtx8zMulDGCNpT\ngLdHxAqAiHiJbCStmZlVpIzTOEuAZyV9QdJ3JP2JpLklbMfMzLpURrKfDZwL3BYR5wL/CKwsYTtm\nZtalMs7Z7wf2R8S30/t7aZvs1+SmJ3AhNDOzY9W6EBqApG8AH46IvZLWACdFxA25zwe8z37QWy99\nn323fJ+9WX3U8T77a4C7JM0B/h64qqTtmJlZF8qqjbMDOK+MdZuZWe9cG8fMrAGc7M3MGmBEa+M0\nz6CPB/RFUrNmc7IfKf3fRWRmzVbaaRxJsyRtk7SprG2YmVl3yjxnfy3Zs2d9/sDMrGJllTheBLwH\nuB2fQzAzq1xZR/afAa4HjpS0fjMz60EZJY7fCxyKiG2SJqZfck1uegLXxinXoHfzmNnw1bo2jqRP\nAh8EXgJeBbwGuC8iPpRbxrVxet3yQDVqqvpu9n3f9mlWjEFq4xR+GiciboyIxRGxBLgC+It8ojcz\ns+EbxghaH9aZmVWs1EFVEfGXwF+WuQ0zM5uZa+OYmTWAk72ZWQO4No6ZNVYRtySPyt1mTvZm1nCD\n3so9Ggo/jSNpsaSHJD0u6TFJHy96G2Zm1psyjuwPA9dFxHZJJwN/K2lLROwuYVtmZtaFMgZVHYyI\n7Wn6J8Bu4PVFb8fMzLpX6t04kk4HzgG2lrkdMzPrrLQLtOkUzr3AtekIv8Wa3PQEo1IIbZCr96Ny\n1d7M6qHWhdAAJJ0I/Bnw1Yj4bJvPR7YQWlVF1FwIzax4g/1ewbD371oVQlPWe2uBXe0SvZmZDV8Z\n5+zfCnwAeGd6Bu02SctK2I6ZmXWp8HP2EfFXuAyDmVmtOCmbmTWAk72ZWQM42ZuZNUApyV7SMkl7\nJD0h6YYytmFmZt0r49bLWcDngGXAWcCVkt5Y9HaKN1l1AMcpajBFsSarDqCtOvaVY+pOHWOq634+\niDKO7M8HnoyIfRFxGPhT4LIStlOwyaoDOI5/CbpXx75yTN2pY0x13c8HUUayPw14Ovd+f5pnZmYV\nKaM2Tldjh1/zmn/b84pfeukAL7zQ89fMzBqv8No4ki4A1kTEsvR+FXAkIj6dW8bFUszM+tBvbZwy\nkv1s4O+AdwHfBR4GrvTDS8zMqlNGuYSXJP028HVgFrDWid7MrFqllDg2M7N6KeM++zskTUnamZs3\nX9IWSXslbZY0L/fZqjT4ao+kdxcdT4eY1kjan6vMeemQY2r7YPYa9NV0cVXWX5JeJWmrpO2Sdkn6\nVJpfWV91iKnS/SptZ1ba9qb0vtJ9apqY6tBP+yQ9mrb/cJpX9e9fu5iK6auIKPQFvJ3sUYQ7c/Nu\nBn4/Td8A3JSmzwK2AycCpwNPAicMKabVwO+2WXZYMZ0KLE3TJ5Nd53hjDfpquriq7q+56d/ZwLeA\nt9Wgr9rFVGk/pW39LnAXsDG9r7SfpompDv30FDC/ZV7V+1S7mArpqzIeOP5N4LmW2cuBdWl6HXB5\nmr4MWB8RhyNiXwr2/CHFBNljmFoNK6Z2D2Y/jer7arq4oNr+OnrT7Ryya0HPUX1ftYsJKuwnSYuA\n9wC35+KotJ+miUlU2E/58FreV9pX08Q03byeYhpWIbQFETGVpqeABWn69WSDro4a9gCsayTtkLQ2\n99+1ocekYx/MXpu+ysX1rTSrsv6SdIKk7WR98lBEPE7FfTVNTFDtfvUZ4HrgSG5e1ftUu5iC6n//\nAnhA0iOSPpLmVd1X7WKCAvpq6FUvI/v/R6erwsO6Yvx5YAmwFDgA3NJh2dJiUvZg9vvIHsz+/DEb\nrbCvdPwD4yvtr4g4EhFLgUXAOyS9s+XzofdVm5gmqLCfJL0XOBQR22h/JDj0fuoQUx1+/94aEecA\nlwIfk/T2YzZaze9fu5gK6athJfspSacCSFoIHErznwEW55ZblOaVLiIORUL238uj//0ZWkzKHsx+\nH3BnRGxIsyvvq1xcXzoaVx36K8XxI+DPgV+gBn3VEtNbKu6nXwKWS3oKWA9cJOlOqu2ndjF9sQ77\nU0QcSP8+C3w5xVDpPtUupsL6qp+LCDO9yC4WtF6gvSFNr+T4ix5zyP5y/T3pdtAhxLQwN30dcPcw\nYyI7yvki8JmW+ZX2VYe4Kusv4HXAvDR9EvANskF7lfVVh5hOrXK/ym37QmBTHfapaWKq+vdvLvDP\n0vSrgb8G3l3xPjVdTIXsU2X8QNeTjZx9kawg2lXAfOABYC+w+egvSVr+RrILC3uAXy5pJ2uN6Wqy\nhPYosAPYQHaubpgxvY3sHOZ2YFt6LatBX7WL69Iq+ws4G/hOiulR4Po0v7K+6hBTpftVblsX8sqd\nL5XuU7ltTeRiurPi378l6We3HXgMWFV1X3WIqZB9yoOqzMwawI8lNDNrACd7M7MGcLI3M2sAJ3sz\nswZwsjczawAnezOzBnCyNzNrACd7M7MG+P/kLqdEhhevnAAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0xd48efd0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "plt.subplot(211)\n",
+    "plt.hist(train['Fare'],bins=30,range=(train['Fare'].min(),100))\n",
+    "plt.subplot(212)\n",
+    "plt.hist(train['Fare'],bins=20,range=(100,train['Fare'].max()))"
    ]
   },
   {
