Started working with the movielens dataset

--- a/python_learning/movielens_analysis_pandas_learn/Pandas tutorial - using MovieLens dataset.ipynb
+++ b/python_learning/movielens_analysis_pandas_learn/Pandas tutorial - using MovieLens dataset.ipynb
@@ -1672,6 +1672,268 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introducting the movielens dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A very cool dataset comprising of 100,000 ratings made by 943 users on 1,682 movies.\n",
+    "\n",
+    "I've downloaded the movielens dataset from <a href=\"http://grouplens.org/datasets/movielens/\">here</a>. The folder ml-100k has a README  that has descriptions for most of the files we will use."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ingesting the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>zip_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>M</td>\n",
+       "      <td>technician</td>\n",
+       "      <td>85711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>53</td>\n",
+       "      <td>F</td>\n",
+       "      <td>other</td>\n",
+       "      <td>94043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>23</td>\n",
+       "      <td>M</td>\n",
+       "      <td>writer</td>\n",
+       "      <td>32067</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id  age gender  occupation zip_code\n",
+       "0        1   24      M  technician    85711\n",
+       "1        2   53      F       other    94043\n",
+       "2        3   23      M      writer    32067"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ingesting the users dataset. firstly, i got an idea about the columns from the readme. \n",
+    "u_cols = ['user_id','age','gender','occupation','zip_code']\n",
+    "users = pd.read_csv('~/Downloads/ml-100k/u.user',sep = '|', names=u_cols)\n",
+    "users.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>unix_timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>196</td>\n",
+       "      <td>242</td>\n",
+       "      <td>3</td>\n",
+       "      <td>881250949</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>186</td>\n",
+       "      <td>302</td>\n",
+       "      <td>3</td>\n",
+       "      <td>891717742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>22</td>\n",
+       "      <td>377</td>\n",
+       "      <td>1</td>\n",
+       "      <td>878887116</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   user_id  movie_id  rating  unix_timestamp\n",
+       "0      196       242       3       881250949\n",
+       "1      186       302       3       891717742\n",
+       "2       22       377       1       878887116"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# similarly for ratings\n",
+    "r_cols = ['user_id', 'movie_id', 'rating', 'unix_timestamp']\n",
+    "ratings = pd.read_csv('~/Downloads/ml-100k/u.data', sep='\\t', names=r_cols)\n",
+    "ratings.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>video_release_date</th>\n",
+       "      <th>imdb_url</th>\n",
+       "      <th>Unknown</th>\n",
+       "      <th>Action</th>\n",
+       "      <th>Adventure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Toy Story (1995)</td>\n",
+       "      <td>01-Jan-1995</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://us.imdb.com/M/title-exact?Toy%20Story%2...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>GoldenEye (1995)</td>\n",
+       "      <td>01-Jan-1995</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://us.imdb.com/M/title-exact?GoldenEye%20(...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Four Rooms (1995)</td>\n",
+       "      <td>01-Jan-1995</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://us.imdb.com/M/title-exact?Four%20Rooms%...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movie_id              title release_date  video_release_date  \\\n",
+       "0         1   Toy Story (1995)  01-Jan-1995                 NaN   \n",
+       "1         2   GoldenEye (1995)  01-Jan-1995                 NaN   \n",
+       "2         3  Four Rooms (1995)  01-Jan-1995                 NaN   \n",
+       "\n",
+       "                                            imdb_url  Unknown  Action  \\\n",
+       "0  http://us.imdb.com/M/title-exact?Toy%20Story%2...        0       0   \n",
+       "1  http://us.imdb.com/M/title-exact?GoldenEye%20(...        0       1   \n",
+       "2  http://us.imdb.com/M/title-exact?Four%20Rooms%...        0       0   \n",
+       "\n",
+       "   Adventure  \n",
+       "0          0  \n",
+       "1          1  \n",
+       "2          0  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the movies file contains columns indicating the movie's genres\n",
+    "# now, the readme reveals that the first 5 columns of this dataset are descriptors\n",
+    "# and the remaining columns are feature variables for each genre. Let's keep the first 3\n",
+    "# feature variables for kicks but drop the rest. I don't want to clutter the dataset visually.\n",
+    "m_cols = ['movie_id', 'title', 'release_date', 'video_release_date', 'imdb_url','Unknown',\n",
+    "          'Action','Adventure']\n",
+    "movies = pd.read_csv('~/Downloads/ml-100k/u.item', sep='|', names=m_cols, usecols = range(8))\n",
+    "movies.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that I had to use the parameter \"usecols\" and limit the dataset extraction to only the first 8 columns. This is the only case where simply specifying the \"names\" parameter isn't sufficient. If we don't specify usecols, then the column names apply to the last 8 columns only. Makes sense when you think about it, doesn't it? Data is read from the file first and then names needs to be applied in the order of doing things."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
