--- a/python_learning/movielens_analysis_pandas_learn/Pandas tutorial - using MovieLens dataset.ipynb
+++ b/python_learning/movielens_analysis_pandas_learn/Pandas tutorial - using MovieLens dataset.ipynb
@@ -2805,7 +2805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 118,
    "metadata": {
     "collapsed": false
    },
@@ -2867,7 +2867,7 @@
        "4    4        e         h"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2883,6 +2883,668 @@
    "metadata": {},
    "source": [
     "I tried selecting specific rows in the left_data and right_data, but couldn't select only the left_val and right_val. Need to investigate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of joining on a specific column, you can also join on the index."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key_x</th>\n",
+       "      <th>left_val</th>\n",
+       "      <th>key_y</th>\n",
+       "      <th>right_val</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>a</td>\n",
+       "      <td>2</td>\n",
+       "      <td>f</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>b</td>\n",
+       "      <td>3</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>c</td>\n",
+       "      <td>4</td>\n",
+       "      <td>h</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>d</td>\n",
+       "      <td>5</td>\n",
+       "      <td>i</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>e</td>\n",
+       "      <td>6</td>\n",
+       "      <td>j</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   key_x left_val  key_y right_val\n",
+       "0      0        a      2         f\n",
+       "1      1        b      3         g\n",
+       "2      2        c      4         h\n",
+       "3      3        d      5         i\n",
+       "4      4        e      6         j"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.merge(left_data,right_data,left_index=True,right_index=True,how='inner')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The join can be a combination of column on one table and key on the other table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key</th>\n",
+       "      <th>key_x</th>\n",
+       "      <th>left_val</th>\n",
+       "      <th>key_y</th>\n",
+       "      <th>right_val</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>c</td>\n",
+       "      <td>2</td>\n",
+       "      <td>f</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>d</td>\n",
+       "      <td>3</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>e</td>\n",
+       "      <td>4</td>\n",
+       "      <td>h</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   key  key_x left_val  key_y right_val\n",
+       "0    2      2        c      2         f\n",
+       "1    3      3        d      3         g\n",
+       "2    4      4        e      4         h"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.merge(left_data,right_data,left_index=True,right_on='key',how='inner')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similar to a left join, you can also merge like a right outer join, or a full outer join."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key</th>\n",
+       "      <th>left_val</th>\n",
+       "      <th>right_val</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>a</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>b</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>c</td>\n",
+       "      <td>f</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>d</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>e</td>\n",
+       "      <td>h</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>i</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>j</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   key left_val right_val\n",
+       "0    0        a       NaN\n",
+       "1    1        b       NaN\n",
+       "2    2        c         f\n",
+       "3    3        d         g\n",
+       "4    4        e         h\n",
+       "5    5      NaN         i\n",
+       "6    6      NaN         j"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.merge(left_data,right_data, on = 'key', how='outer')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Unioning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pandas can combine DataFrames along an axis using \"pd.concat\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key</th>\n",
+       "      <th>left_val</th>\n",
+       "      <th>right_val</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>a</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>b</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>c</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>d</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>e</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>f</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>h</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>i</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>j</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   key left_val right_val\n",
+       "0    0        a       NaN\n",
+       "1    1        b       NaN\n",
+       "2    2        c       NaN\n",
+       "3    3        d       NaN\n",
+       "4    4        e       NaN\n",
+       "0    2      NaN         f\n",
+       "1    3      NaN         g\n",
+       "2    4      NaN         h\n",
+       "3    5      NaN         i\n",
+       "4    6      NaN         j"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([left_data,right_data])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pandas offers some more flexibility to an RDBMS by allowing side-by-side concatenation, like so - "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>key</th>\n",
+       "      <th>left_val</th>\n",
+       "      <th>key</th>\n",
+       "      <th>right_val</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>a</td>\n",
+       "      <td>2</td>\n",
+       "      <td>f</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>b</td>\n",
+       "      <td>3</td>\n",
+       "      <td>g</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>c</td>\n",
+       "      <td>4</td>\n",
+       "      <td>h</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>d</td>\n",
+       "      <td>5</td>\n",
+       "      <td>i</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>e</td>\n",
+       "      <td>6</td>\n",
+       "      <td>j</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   key left_val  key right_val\n",
+       "0    0        a    2         f\n",
+       "1    1        b    3         g\n",
+       "2    2        c    4         h\n",
+       "3    3        d    5         i\n",
+       "4    4        e    6         j"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([left_data,right_data], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grouping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using a new dataset to explore grouping using the chicago salaries. SALARY DATASET.\n",
+    "\n",
+    "Why? This is because it'll help me explore the lambda function. You'll see.\n",
+    "\n",
+    "Dataset is available here - https://raw.githubusercontent.com/gjreda/gregreda.com/master/content/notebooks/data/city-of-chicago-salaries.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Position Title</th>\n",
+       "      <th>Department</th>\n",
+       "      <th>Employee Annual Salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AARON,  ELVIA J</td>\n",
+       "      <td>WATER RATE TAKER</td>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>$85512.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AARON,  JEFFERY M</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>$75372.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AARON,  KIMBERLEI R</td>\n",
+       "      <td>CHIEF CONTRACT EXPEDITER</td>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>$80916.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Name            Position Title        Department  \\\n",
+       "0      AARON,  ELVIA J          WATER RATE TAKER       WATER MGMNT   \n",
+       "1    AARON,  JEFFERY M            POLICE OFFICER            POLICE   \n",
+       "2  AARON,  KIMBERLEI R  CHIEF CONTRACT EXPEDITER  GENERAL SERVICES   \n",
+       "\n",
+       "  Employee Annual Salary  \n",
+       "0              $85512.00  \n",
+       "1              $75372.00  \n",
+       "2              $80916.00  "
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://raw.githubusercontent.com/gjreda/gregreda.com/master/content/notebooks/\"\\\n",
+    "       data/city-of-chicago-salaries.csv'\n",
+    "salaries = pd.read_table(url, sep=',')\n",
+    "salaries.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NOTE - I CONTINUED THE LINK IN SECOND LINE BY CLOSING THE DOUBLE QUOTES AND HITTING \\ SYMBOL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. We can see that the employee annual salary has a dollar sign in the beginning, so python will consider it as a string. We need to fix that.\n",
+    "2. Column names are also with spaces and multiple words. Let's fix that as well."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# ?pd.read_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check out the \"converters\" parameter for the read_table or read_csv command. It says\n",
+    "\n",
+    "converters : dict, default None\n",
+    "    Dict of functions for converting values in certain columns. Keys can either\n",
+    "    be integers or column labels\n",
+    "    \n",
+    "Let's use this to convert the salary field into float."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>title</th>\n",
+       "      <th>department</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AARON,  ELVIA J</td>\n",
+       "      <td>WATER RATE TAKER</td>\n",
+       "      <td>WATER MGMNT</td>\n",
+       "      <td>85512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>AARON,  JEFFERY M</td>\n",
+       "      <td>POLICE OFFICER</td>\n",
+       "      <td>POLICE</td>\n",
+       "      <td>75372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AARON,  KIMBERLEI R</td>\n",
+       "      <td>CHIEF CONTRACT EXPEDITER</td>\n",
+       "      <td>GENERAL SERVICES</td>\n",
+       "      <td>80916</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  name                     title        department  salary\n",
+       "0      AARON,  ELVIA J          WATER RATE TAKER       WATER MGMNT   85512\n",
+       "1    AARON,  JEFFERY M            POLICE OFFICER            POLICE   75372\n",
+       "2  AARON,  KIMBERLEI R  CHIEF CONTRACT EXPEDITER  GENERAL SERVICES   80916"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# read the salaries data from Greg's github\n",
+    "salaries = pd.read_table(url,\n",
+    "                         sep = ',',\n",
+    "                         converters={'Employee Annual Salary': lambda x: float(x.replace('$', ''))})\n",
+    "\n",
+    "# changing column names to single word\n",
+    "headers = ['name','title','department','salary']\n",
+    "salaries.columns = headers\n",
+    "\n",
+    "salaries.head(3)"
    ]
   },
   {
