--- a/UW_coursera_machinelearning/Week4/week4_document_retrieval_vb.ipynb
+++ b/UW_coursera_machinelearning/Week4/week4_document_retrieval_vb.ipynb
@@ -2,13 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/Vivek/anaconda/lib/python2.7/site-packages/matplotlib/__init__.py:872: UserWarning: axes.color_cycle is deprecated and replaced with axes.prop_cycle; please use the latter.\n",
+      "  warnings.warn(self.msg_depr % (key, alt_key))\n"
+     ]
+    }
+   ],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "pd.set_option('max_columns',100)\n",
+    "%matplotlib inline\n",
+    "import seaborn\n",
+    "# Set seaborn aesthetic parameters to defaults - just to make plots stand out!\n",
+    "seaborn.set()"
    ]
   },
   {
@@ -20,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -31,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -100,7 +116,7 @@
        "4  henry krvits born 30 december 1974 in tallinn ...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -122,7 +138,7 @@
        "59071"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -169,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -180,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -230,7 +246,7 @@
        "      <th>35817</th>\n",
        "      <td>&lt;http://dbpedia.org/resource/Barack_Obama&gt;</td>\n",
        "      <td>Barack Obama</td>\n",
-       "      <td>barack hussein obama ii brk husen bm born augu...</td>\n",
+       "      <td>barack hussein obama ii brk husen bm born august 4 1961 is the 44th and current president of the united states and the first african american to hold the office born in honolulu hawaii obama is a graduate of columbia university and harvard law school where he served as president of the harvard law review he was a community organizer in chicago before earning his law degree he worked as a civil rights attorney and taught constitutional law at the university of chicago law school from 1992 to 2004 he served three terms representing the 13th district in the illinois senate from 1997 to 2004 running unsuccessfully for the united states house of representatives in 2000in 2004 obama received national attention during his campaign to represent illinois in the united states senate with his victory in the march democratic party primary his keynote address at the democratic national convention in july and his election to the senate in november he began his presidential campaign in 2007 and after a close primary campaign against hillary rodham clinton in 2008 he won sufficient delegates in the democratic party primaries to receive the presidential nomination he then defeated republican nominee john mccain in the general election and was inaugurated as president on january 20 2009 nine months after his election obama was named the 2009 nobel peace prize laureateduring his first two years in office obama signed into law economic stimulus legislation in response to the great recession in the form of the american recovery and reinvestment act of 2009 and the tax relief unemployment insurance reauthorization and job creation act of 2010 other major domestic initiatives in his first term included the patient protection and affordable care act often referred to as obamacare the doddfrank wall street reform and consumer protection act and the dont ask dont tell repeal act of 2010 in foreign policy obama ended us military involvement in the iraq war increased us troop levels in afg...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -240,11 +256,11 @@
        "                                              URI          name  \\\n",
        "35817  <http://dbpedia.org/resource/Barack_Obama>  Barack Obama   \n",
        "\n",
-       "                                                    text  \n",
-       "35817  barack hussein obama ii brk husen bm born augu...  "
+       "                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  text  \n",
+       "35817  barack hussein obama ii brk husen bm born august 4 1961 is the 44th and current president of the united states and the first african american to hold the office born in honolulu hawaii obama is a graduate of columbia university and harvard law school where he served as president of the harvard law review he was a community organizer in chicago before earning his law degree he worked as a civil rights attorney and taught constitutional law at the university of chicago law school from 1992 to 2004 he served three terms representing the 13th district in the illinois senate from 1997 to 2004 running unsuccessfully for the united states house of representatives in 2000in 2004 obama received national attention during his campaign to represent illinois in the united states senate with his victory in the march democratic party primary his keynote address at the democratic national convention in july and his election to the senate in november he began his presidential campaign in 2007 and after a close primary campaign against hillary rodham clinton in 2008 he won sufficient delegates in the democratic party primaries to receive the presidential nomination he then defeated republican nominee john mccain in the general election and was inaugurated as president on january 20 2009 nine months after his election obama was named the 2009 nobel peace prize laureateduring his first two years in office obama signed into law economic stimulus legislation in response to the great recession in the form of the american recovery and reinvestment act of 2009 and the tax relief unemployment insurance reauthorization and job creation act of 2010 other major domestic initiatives in his first term included the patient protection and affordable care act often referred to as obamacare the doddfrank wall street reform and consumer protection act and the dont ask dont tell repeal act of 2010 in foreign policy obama ended us military involvement in the iraq war increased us troop levels in afg...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,45 +279,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'operations': 1, 'represent': 1, 'office': 2, 'unemployment': 1, 'doddfrank': 1, 'over': 1, 'unconstitutional': 1, 'domestic': 2, 'named': 1, 'years': 1, 'ended': 1, 'proposition': 1, 'seats': 1, 'illinois': 2, 'debate': 1, 'before': 1, 'death': 1, '20': 2, 'californias': 1, 'taxpayer': 1, 'inaugurated': 1, 'obamacare': 1, 'civil': 1, 'the': 40, 'barack': 1, 'to': 14, '4': 1, 'policy': 2, '8': 1, 'has': 4, '2011': 3, '2010': 2, '2013': 1, '2012': 1, 'bin': 1, 'then': 1, 'his': 11, 'march': 1, 'increased': 1, 'cuba': 1, 'term': 3, '1992': 1, '1997': 1, 'not': 1, 'during': 2, 'republican': 2, 'continued': 1, 'presidential': 2, 'husen': 1, 'osama': 1, 'school': 3, 'equality': 1, 'prize': 1, 'lost': 1, 'stimulus': 1, 'january': 3, 'university': 2, 'rights': 1, 'gun': 1, 'rodham': 1, 'victory': 1, 'withdrawal': 1, 'served': 2, 'where': 1, 'referred': 1, 'unsuccessfully': 1, 'attorney': 1, 'often': 1, 'senate': 3, 'house': 2, 'national': 2, 'creation': 1, 'related': 1, 'hawaii': 1, 'born': 2, 'second': 2, 'taught': 1, 'election': 3, 'close': 1, 'operation': 1, 'insurance': 1, 'sandy': 1, 'afghanistan': 2, 'initiatives': 1, 'for': 4, 'chicago': 2, 'federal': 1, 'review': 1, 'representatives': 2, 'current': 1, 'state': 1, 'won': 1, 'new': 1, 'worked': 1, 'law': 6, 'troop': 1, 'affordable': 1, 'reauthorization': 1, 'keynote': 1, 'full': 1, 'terms': 1, 'august': 1, 'degree': 1, '44th': 1, 'bm': 1, 'mitt': 1, 'attention': 1, 'delegates': 1, 'lgbt': 1, 'job': 1, 'harvard': 2, 'address': 1, 'ask': 1, 'november': 2, 'debt': 1, 'by': 1, 'care': 1, 'on': 2, 'great': 1, 'signed': 3, 'libya': 1, 'receive': 1, 'of': 18, 'months': 1, 'against': 1, 'foreign': 2, 'american': 3, 'protection': 2, 'economic': 1, 'act': 8, 'military': 4, 'hussein': 1, 'or': 1, 'first': 3, 'and': 21, 'major': 1, 'clinton': 1, 'dont': 2, 'campaign': 3, 'russia': 1, 'wall': 1, 'legislation': 1, 'into': 1, 'primary': 2, 'community': 1, 'mccain': 1, 'down': 1, 'hook': 1, 'ii': 1, '63': 1, 'americans': 1, 'elementary': 1, 'total': 1, 'earning': 1, 'he': 7, 'iraq': 4, 'from': 3, 'raise': 1, 'district': 1, 'spending': 1, 'nine': 1, 'reinvestment': 1, 'three': 1, 'relations': 1, 'nobel': 1, 'start': 1, 'convention': 1, 'resulted': 1, 'john': 1, 'was': 5, 'tell': 1, 'a': 7, 'form': 1, 'received': 1, 'with': 3, 'tax': 1, 'sufficient': 1, 'republicans': 1, 'strike': 1, 'hillary': 1, 'arms': 1, 'honolulu': 1, 'filed': 1, 'regained': 1, 'july': 1, 'hold': 1, 'representing': 1, 'obama': 9, 'states': 3, 'made': 1, 'brk': 1, '1996': 1, 'whether': 1, 'reelected': 1, 'budget': 1, 'us': 6, 'nations': 1, 'recession': 1, 'while': 1, 'defense': 1, 'marriage': 1, 'policies': 1, 'promoted': 1, 'called': 1, 'control': 4, 'supreme': 1, 'ordered': 3, 'nominee': 2, 'process': 1, '2000in': 1, 'is': 2, 'romney': 1, 'briefs': 1, 'defeated': 1, 'general': 1, '13th': 1, 'as': 6, 'at': 2, 'in': 30, 'sought': 1, 'limit': 1, 'organizer': 1, 'shooting': 1, '2012obama': 1, 'gains': 1, 'normalize': 1, 'lengthy': 1, 'united': 3, 'court': 1, 'recovery': 1, 'laden': 1, 'began': 1, 'peace': 1, 'administration': 1, '1961': 1, 'graduate': 1, 'that': 1, 'other': 1, 'patient': 1, 'which': 1, 'party': 3, 'primaries': 1, 'sworn': 1, '2007': 1, 'war': 1, 'columbia': 1, 'combat': 1, 'after': 4, 'islamic': 1, 'running': 1, 'levels': 1, 'two': 1, 'involvement': 3, 'included': 1, 'president': 4, 'repeal': 1, 'nomination': 1, 'response': 3, 'street': 1, 'urged': 1, 'democratic': 4, 'ending': 1, 'reform': 1, 'constitutional': 1, 'defeating': 1, 'treaty': 1, 'relief': 2, '2004': 3, 'african': 1, '2008': 1, '2009': 3, 'consumer': 1, 'laureateduring': 1}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#create list comprehension of all elements\n",
-    "wordlist = [j for i in obama['text'] for j in i.split()]\n",
-    "#print wordlist\n",
-    "\n",
-    "#create dict\n",
-    "d={}\n",
-    "\n",
-    "#initialize keys\n",
-    "for e in set(wordlist):\n",
-    "    d[e] = 0\n",
-    "    \n",
-    "#store counts in dict\n",
-    "for e in wordlist:\n",
-    "        d[e] += 1\n",
-    "print d"
+    "wordlist = str(obama['text']).split()\n",
+    "type(wordlist)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# define a function that outputs the word frequency of any given list\n",
+    "def count_frequencies(input_list):\n",
+    "    wordfreq = []\n",
+    "    for w in input_list:\n",
+    "        wordfreq.append(wordlist.count(w))\n",
+    "    str(zip(wordlist,wordfreq))"
+   ]
   },
   {
    "cell_type": "code",
